@@ -11,6 +11,8 @@
  * hull: In contrast to function or (|), the interval constructor is no longer
    considered a set operation and can create intervals with a non-trivial
    decoration.
+ 
+ * Improved performance of console output, intervaltotext and intervaltoexact.
 
 Bugfixes
  * mtimes, mldivide: Support for broadcasting of scalar parameters
